--- a/BankApp.Api/appsettings.json
+++ b/BankApp.Api/appsettings.json
@@ -8,5 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "9ZCSQ8u9u9044EH43q54a8ZD7A0A603E",
+    "Issuer": "http://localhost:5372",
+    "Audience": "http://localhost:5372",
+    "Subject": "JWTServiceAccessToken",
+    "ClientId": "admin",
+    "ClientSecret": "123H56"
+  },
   "AllowedHosts": "*"
 }
